# inference-arena

./: .dockerignore  .env.example  .gitignore  README.md  experiment.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  experiment.yml  feature.yml
.github/workflows/: README.md  ci.yml  validate-experiment-config.yml
architectures/microservices/: docker-compose.yml  init_microservices_models.py
architectures/microservices/classification/: Dockerfile
architectures/microservices/classification/app/: __init__.py  config.py  inference.py  logger.py  main.py  servicer.py
architectures/microservices/detection/: Dockerfile
architectures/microservices/detection/app/: __init__.py  config.py  grpc_client.py  inference.py  logger.py  main.py  models.py
architectures/monolithic/: Dockerfile  docker-compose.yml  init_monolith_models.py
architectures/monolithic/app/: __init__.py  config.py  inference.py  logger.py  main.py
architectures/triton/: docker-compose.yml  init_triton_models.py
architectures/triton/gateway/: Dockerfile
architectures/triton/gateway/app/: __init__.py  config.py  main.py  models.py  pipeline.py  postprocess.py  triton_client.py
data/thesis_test_set/: manifest.json
docs/: ENVIRONMENT.md  QUICK_START.md  SETUP.md
infrastructure/: docker-compose.infra.yml
infrastructure/grafana/provisioning/dashboards/: dashboards.yml  infrastructure-micro.json  infrastructure-mono.json  infrastructure-triton.json  infrastructure.json
infrastructure/grafana/provisioning/datasources/: datasources.yml
infrastructure/minio/: __init__.py  init_models.py  triton_config.py
infrastructure/prometheus/: prometheus.yml
infrastructure/scripts/: update-dashboards.sh
scripts/: export_models.py  generate_proto.py  init_project.py  setup_data.py  setup_env.py  start-microservices.sh  start-monolithic.sh  start-triton.sh  upload_models.py
src/: __init__.py
src/shared/: __init__.py  config.py
src/shared/data/: __init__.py  coco_dataset.py  curator.py
src/shared/model/: __init__.py  exporter.py  registry.py
src/shared/processing/: __init__.py  mobilenet_preprocess.py  transforms.py  yolo_preprocess.py
src/shared/proto/: __init__.py  inference.proto
tests/: __init__.py  conftest.py
tests/infrastructure/: __init__.py  conftest.py  test_compose.py  test_integration.py  test_minio_init.py
tests/shared/: __init__.py  test_config.py  test_data.py  test_model.py  test_processing.py  test_proto.py
