# ============================================================================
# Inference Arena - Project Configuration
# ============================================================================
# Master's Thesis: Characterizing ML Serving Architectures in CPU-Constrained
# Environments: An Empirical Comparison of Custom and Managed Inference
#
# Author: Matthew Hong
# ============================================================================

[project]
name = "inference-arena"
version = "0.1.0"
description = "ML Serving Architecture Comparison for Master's Thesis"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Matthew Hong" }]
requires-python = ">=3.11"

# Core dependencies for shared module
dependencies = [
    # Image processing
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    # Configuration
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Model export and inference
# NOTE: Version constraints ensure IR version compatibility
# - onnx <1.17 creates IR version ≤10
# - onnxruntime <1.23 avoids IR version regression bug
# - Verified compatible with Triton 24.08
model = [
    "onnx>=1.15.0,<1.17.0",
    "onnxruntime>=1.18.0,<1.23.0",
    "onnxscript>=0.1.0",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "ultralytics>=8.1.0",
]

# Data processing
data = [
    "requests>=2.31.0",
    "tqdm>=4.66.0",
]

# gRPC for microservices
grpc = [
    "grpcio>=1.60.0",
    "grpcio-tools>=1.60.0",
    "protobuf>=4.25.0",
]

# API framework
api = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "httpx>=0.26.0",
]

# Infrastructure
infra = [
    "minio>=7.2.0",
    "prometheus-client>=0.19.0",
]

# Load testing
loadtest = [
    "locust>=2.20.0",
]

# Development and testing
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

# Analysis and visualization
analysis = [
    "pandas>=2.1.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "scipy>=1.11.0",
    "jupyter>=1.0.0",
]

# All dependencies
all = [
    "inference-arena[model,data,grpc,api,infra,loadtest,dev,analysis]",
]

[project.urls]
Repository = "https://github.com/matthewhoung/inference-arena"

# ============================================================================
# Build System
# ============================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shared"]

[tool.hatch.build.targets.wheel.hooks.custom]
[tool.hatch.build.targets.editable]
dev-mode-dirs = ["src"]

# ============================================================================
# Tool Configuration
# ============================================================================

# pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external services",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

# Black configuration
[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | build
    | dist
    | __pycache__
    | \.mypy_cache
)/
'''

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "D",      # pydocstyle
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "D100",   # missing docstring in public module
    "D104",   # missing docstring in public package
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]  # No docstrings required in tests
"__init__.py" = ["F401"]  # Unused imports OK in __init__

# MyPy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
strict_optional = true
exclude = [
    "venv",
    ".venv",
    "build",
    "dist",
]

[[tool.mypy.overrides]]
module = [
    "cv2.*",
    "onnx.*",
    "onnxruntime.*",
    "minio.*",
    "grpc.*",
    "locust.*",
    "ultralytics.*",
]
ignore_missing_imports = true
